--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -10,3 +10,11 @@ body {
 .main-bg {
   background-image: url('@/assets/images/fondo-banner.png');
 }
+
+.page-subtitle {
+  font-size: 42px;
+
+  @media (min-width: 768px) {
+    font-size: 64px;
+  }
+}
