--- a/assets/styles/fonts.css
+++ b/assets/styles/fonts.css
@@ -1,9 +1,25 @@
 @font-face {
-  font-family: 'GothamFont';
-  src: url('~assets/fonts/Gotham-Font/GothamMedium.ttf'),
-       url('~assets/fonts/Gotham-Font/GothamLight.ttf'),
-       url('~assets/fonts/Gotham-Font/GothamBold.ttf');
-  /* Puedes agregar más formatos de fuente si es necesario */
-  font-weight: normal;
+  font-family: "Gotham Light";
+  src: url("~assets/fonts/Gotham-Font/gothamlight-webfont.woff2")
+      format("woff2"),
+    url("~assets/fonts/Gotham-Font/gothamlight-webfont.woff") format("woff");
+  font-weight: 300; /* Peso de la fuente "light" */
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Gotham Regular";
+  src: url("~assets/fonts/Gotham-Font/gothammedium-webfont.woff2")
+      format("woff2"),
+    url("~assets/fonts/Gotham-Font/gothammedium-webfont.woff") format("woff");
+  font-weight: 400; /* Peso de la fuente "regular" */
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Gotham Bold";
+  src: url("~assets/fonts/Gotham-Font/gothambold-webfont.woff2") format("woff2"),
+    url("~assets/fonts/Gotham-Font/gothambold-webfont.woff") format("woff");
+  font-weight: 700; /* Peso de la fuente "bold" */
   font-style: normal;
 }
