--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3,8 +3,12 @@
 @tailwind utilities;
 
 body {
-    font-family: 'GothamFont', sans-serif !important;
+    font-family: 'Gotham Light', sans-serif !important;
     @apply text-zinc-800;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Gotham Bold', sans-serif !important;
 }
 
 .main-bg {
@@ -16,5 +20,11 @@ body {
 
   @media (min-width: 768px) {
     font-size: 64px;
+  }
+}
+
+.terms {
+  a {
+    @apply text-jijuna-primary underline;
   }
 }
