--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -25,10 +25,14 @@ h1, h2, h3, h4, h5 {
 }
 
 .page-subtitle {
+  @apply uppercase;
   font-size: 42px;
+  font-family: 'Inure Black' !important;
+  letter-spacing: .5rem;
 
   @media (min-width: 768px) {
-    font-size: 64px;
+    font-size: 45px;
+    font-family: 'Gotham Bold';
   }
 }
 
